Fix a thumbnail spacing issue

--- a/wp-content/themes/mediaplus-2017/assets/css/pages/journal.scss
+++ b/wp-content/themes/mediaplus-2017/assets/css/pages/journal.scss
@@ -32,6 +32,7 @@
   padding-bottom: 3.25em; /* Space for more link */
 
   picture, img {
+    display: block;
     width: 100%;
     height: auto;
   }
